[tool.poetry]
name = "projeto-de-pratica"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^4.1.0"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
